# RaytracingCamp2024

./: .gitignore  LICENSE  README.md
camp10/: package.bat
camp10/c5h12_cpu/etc/: config.json
camp_ver/camp10/: package.bat
camp_ver/camp10/c5h12_cpu/: run.ps1
camp_ver/camp10/c5h12_cpu/etc/: scene_main.json
etc/: scene_cut01.json  scene_cut03.json
etc/images/cc/: 0009.tga
etc/images/logo/: 0001.tga  0002.tga  0003.tga  0004.tga  0005.tga  0006.tga
name_cpu/etc/: scene_cut02.json
src/: CMakeLists.txt
src/sources/: .editorconfig  CMakeLists.txt
src/sources/linearalgebra/: constants.h  linearalgebra.h  matrix4.h  matrix4.inl  quaternion.h  quaternion.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
src/sources/petals/: aabb.cc  aabb.h  animation.cc  animation.h  animstand.cc  animstand.h  assetlibrary.cc  assetlibrary.h  bvh.cc  bvh.h  camera.cc  camera.h  config.cc  config.h  framebuffer.cc  framebuffer.h  intersection.h  keyframesampler.cc  keyframesampler.h  light.cc  light.h  main.cc  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  postprocessor.cc  postprocessor.h  random.h  ray.h  renderer.cc  renderer.h  renderscheduler.cc  renderscheduler.h  scene.cc  scene.h  sceneloader.h  sceneloader_animstand.cc  (+10 more)
src/sources/spectranotes/: animation.cc  assetlibrary.cc  bvh.cc  camera.cc  config.cc  config.h  intersection.h  light.cc  light.h  main.cc  material.cc  mesh.cc  mesh.h  postprocessor.cc  postprocessor.h  pptypes.h  random.h  ray.h  renderscheduler.cc  scene.cc  scene.h  skin.cc  texture.cc
src/sources/spectrenotes/: aabb.cc  aabb.h  animation.cc  animation.h  animstand.cc  animstand.h  assetlibrary.cc  assetlibrary.h  bvh.cc  bvh.h  camera.cc  camera.h  config.cc  config.h  framebuffer.cc  framebuffer.h  intersection.h  keyframesampler.cc  keyframesampler.h  light.cc  light.h  main.cc  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  postprocessor.cc  postprocessor.h  random.h  ray.h  renderer.cc  renderer.h  renderscheduler.cc  renderscheduler.h  scene.cc  scene.h  sceneloader.cc  sceneloader.h  (+11 more)
src/tests/: CMakeLists.txt  testconfig.h.in  testmain.cc  testsupport.cc  testsupport.h
src/tests/linearalgebraTests/: Matrix4Tests.cc  QuaternionTests.cc  Vector3Tests.cc  Vector4Tests.cc
src/tests/mainTests/: aabbTests.cc  animationTests.cc  bvhTests.cc  configTests.cc  framebufferTests.cc  materialTests.cc  randomTests.cc  rayTests.cc  sceneloaderTests.cc  textureTests.cc
src/tests/testdata/: _memo.txt  test_cut02.json  test_scene01.json
src/tests/testdata/config/: testconfig00.json
